<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".presentation.sign_up.SignUpFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="-3"
        android:scaleX="1.15"
        android:scaleY="1"
        android:src="@drawable/rounded_object"
        app:layout_constraintBottom_toBottomOf="@id/create_account_label"
        app:layout_constraintEnd_toEndOf="@id/create_account_label"
        app:layout_constraintStart_toStartOf="@id/create_account_label"
        app:layout_constraintTop_toTopOf="@id/create_account_label"
        app:tint="@color/brand1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/create_account_label"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/create_account"
        android:textColor="@color/background"
        android:textSize="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/create_account_label">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/accentText" />

        <EditText
            android:id="@+id/username_editText"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brand2"
            android:hint="@string/how_to_call_you"
            android:inputType="textPersonName"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/accentText" />

        <EditText
            android:id="@+id/email_editText"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brand2"
            android:hint="@string/your_post"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_account"
            android:textColor="@color/accentText" />

        <EditText
            android:id="@+id/password_editText"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brand2"
            android:hint="@string/password_for_account"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="25"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />

    </LinearLayout>

    <Button
        android:id="@+id/to_sign_in_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@drawable/circle"
        android:backgroundTint="@color/brand1"
        android:paddingBottom="30dp"
        android:rotation="-90"
        android:text="@string/sign_in"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75" />

    <Button
        android:id="@+id/sign_up_button"
        style="@style/ContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/brand2"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>