<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.join_game.JoinGameFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/transparent_button"
        android:scaleType="fitXY"
        android:src="@drawable/ic_back"
        android:tint="@color/brand2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="-3"
        android:scaleX="1.15"
        android:scaleY="1"
        android:src="@drawable/rounded_object"
        app:layout_constraintBottom_toBottomOf="@id/join_game_label"
        app:layout_constraintEnd_toEndOf="@id/join_game_label"
        app:layout_constraintStart_toStartOf="@id/join_game_label"
        app:layout_constraintTop_toTopOf="@id/join_game_label"
        app:tint="@color/brand1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/join_game_label"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_game"
        android:textColor="@color/background"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="@id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/join_game_label">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lobby_id"
            android:textColor="@color/accentText" />

        <EditText
            android:id="@+id/lobby_id_editText"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brand2"
            android:hint="@string/join_lobby_id"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lobby_password"
            android:textColor="@color/accentText" />

        <EditText
            android:id="@+id/password_editText"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/brand2"
            android:hint="@string/host_lobby_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLength="25"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColor="@color/primaryText"
            android:textColorHint="@color/secondaryText" />

    </LinearLayout>

    <Button
        android:id="@+id/join_game_button"
        style="@style/ContentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/rounded_button"
        android:text="@string/start_game"
        android:textAllCaps="false"
        android:textColor="@color/brand2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>