<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sea"
    tools:context=".presentation.menu.MenuFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.3"
        android:src="#000000"
        tools:ignore="ContentDescription" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar_imageView"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?selectableItemBackground"
        app:civ_border_color="@color/background"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute"
        tools:src="@drawable/octopus" />

    <TextView
        android:id="@+id/nickname_textView"
        style="@style/ContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="@color/background"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/avatar_imageView"
        app:layout_constraintTop_toTopOf="@id/avatar_imageView"
        tools:text="Nickname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            style="@style/TitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/support"
            android:textSize="32dp"
            tools:ignore="SpUsage" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="32dp" />

        <Button
            android:id="@+id/host_game_button"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_empty_button"
            android:backgroundTint="@color/background"
            android:text="@string/host_game"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/join_game_button"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_empty_button"
            android:backgroundTint="@color/background"
            android:text="@string/join_game"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/formation_button"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_empty_button"
            android:backgroundTint="@color/background"
            android:text="@string/ships_formation"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textStyle="bold" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <Button
            android:id="@+id/account_button"
            style="@style/ContentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_empty_button"
            android:backgroundTint="@color/background"
            android:text="@string/player_account"
            android:textAllCaps="false"
            android:textColor="@color/background"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>