<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.await_players.AwaitPlayersFragment">

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/transparent_button"
        android:scaleType="fitXY"
        android:src="@drawable/ic_cross"
        android:tint="@color/brand2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:rotation="-3"
        android:scaleX="1.15"
        android:scaleY="1"
        android:src="@drawable/rounded_object"
        app:layout_constraintBottom_toBottomOf="@id/await_label"
        app:layout_constraintEnd_toEndOf="@id/await_label"
        app:layout_constraintStart_toStartOf="@id/await_label"
        app:layout_constraintTop_toTopOf="@id/await_label"
        app:tint="@color/brand1"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/await_label"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awaiting"
        android:textColor="@color/background"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="@id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cancel_button"
        tools:ignore="SpUsage" />

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/indicatorView"
        style="@style/AVLoadingIndicatorView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:indicatorColor="@color/support"
        app:indicatorName="BallSpinFadeLoaderIndicator"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/await_label"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        style="@style/ContentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/await_player_instruction"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicatorView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/id"
            android:textColor="@color/accentText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/lobby_id_textView"
            style="@style/ContentText"
            android:layout_weight="10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:ellipsize="end"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:maxLines="1"
            android:textColor="@color/accentText"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UnusedAttribute"
            tools:text="13354-2sfs-235fsg54-2fsr9f-0tge-6ge2sfs-235fsg54-2fsr9f-0t" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/share_id_button"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:background="@drawable/transparent_button"
            android:scaleType="fitXY"
            android:src="@drawable/ic_share"
            android:tint="@color/support"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>